--- a/ply_root/board_assets/stylesheets/weather/weather.scss
+++ b/ply_root/board_assets/stylesheets/weather/weather.scss
@@ -43,11 +43,11 @@ $font: Helvetica, arial, freesans, clean, sans-serif;
   vertical-align: top;
   display: inline-block;
 
-  font-size: 70pt;
+  font-size: 500%;
   font-family: $font;
   color: $white;
 
-  width: 150px;
+  width: 19%;
 
   .byline {
     font-size: 25pt;
